# RMG

./: .clang-format  .gitignore  CMakeLists.txt  README.md  TODO  appveyor.yml  servers.json
Source/RMG/: CMakeLists.txt  Callbacks.cpp  Callbacks.hpp  Config.hpp  Config.hpp.in  Globals.cpp  Globals.hpp  Logger.cpp  Logger.hpp  OnScreenDisplay.cpp  OnScreenDisplay.hpp  RMG.qrc  VidExt.cpp  VidExt.hpp  main.cpp
Source/RMG-Audio/: CMakeLists.txt  README.md  circular_buffer.cpp  circular_buffer.hpp  main.cpp  main.hpp  sdl_backend.cpp  sdl_backend.hpp  simple_sdl_backend.cpp  simple_sdl_backend.hpp
Source/RMG-Audio/Resamplers/: resamplers.cpp  resamplers.hpp  speex.cpp  src.cpp  trivial.cpp
Source/RMG-Audio/UserInterface/: MainDialog.cpp  MainDialog.hpp  MainDialog.ui  UIResources.qrc
Source/RMG-Core/: Archive.cpp  Archive.hpp  CMakeLists.txt  CachedRomHeaderAndSettings.cpp  CachedRomHeaderAndSettings.hpp  Callback.cpp  Callback.hpp  Cheats.cpp  Cheats.hpp  Config.hpp.in  ConvertStringEncoding.cpp  ConvertStringEncoding.hpp  Core.cpp  Core.hpp  Debug.cpp  Debug.hpp  Directories.cpp  Directories.hpp  DiscordRpc.cpp  DiscordRpc.hpp  Emulation.cpp  Emulation.hpp  Error.cpp  Error.hpp  File.cpp  File.hpp  GDBStub.cpp  GDBStub.hpp  Kaillera.cpp  Kaillera.hpp  Key.cpp  Key.hpp  Library.cpp  Library.hpp  MediaLoader.cpp  MediaLoader.hpp  Mouse.cpp  Mouse.hpp  Netplay.cpp  Netplay.hpp  (+35 more)
Source/RMG-Core/Settings/: Settings.cpp  Settings.hpp  SettingsID.hpp
Source/RMG-Core/Utils/: File.hpp
Source/RMG-Core/m64p/: Api.cpp  Api.hpp  ConfigApi.cpp  ConfigApi.hpp  CoreApi.cpp  CoreApi.hpp  DebugApi.cpp  DebugApi.hpp  Macros.hpp  PluginApi.cpp  PluginApi.hpp
Source/RMG-Core/m64p/api/: m64p_custom.h  m64p_plugin.h  m64p_types.h
Source/RMG-Core/osal/: osal_dynlib.hpp  osal_dynlib_unix.cpp  osal_dynlib_win32.cpp  osal_files.hpp  osal_files_unix.cpp  osal_files_win32.cpp
Source/RMG-Input/: CMakeLists.txt  VRU.cpp  VRU.hpp  VRUwords.cpp  VRUwords.hpp  common.cpp  common.hpp  main.cpp  main.hpp
Source/RMG-Input-GCA/: CMakeLists.txt  main.cpp
Source/RMG-Input-GCA/UserInterface/: MainDialog.cpp  MainDialog.hpp  MainDialog.ui
Source/RMG-Input/Thread/: HotkeysThread.cpp  HotkeysThread.hpp  SDLThread.cpp  SDLThread.hpp
Source/RMG-Input/UserInterface/: EventFilter.cpp  EventFilter.hpp  HotkeysDialog.cpp  HotkeysDialog.hpp  HotkeysDialog.ui  MainDialog.cpp  MainDialog.hpp  MainDialog.ui  OptionsDialog.cpp  OptionsDialog.hpp  OptionsDialog.ui  UICommon.cpp  UICommon.hpp  UIResources.qrc
Source/RMG-Input/UserInterface/Layout/: AlignCenterLayout.cpp  AlignCenterLayout.hpp
Source/RMG-Input/UserInterface/Widget/: AddMappingButton.cpp  AddMappingButton.hpp  ControllerImageWidget.cpp  ControllerImageWidget.hpp  ControllerWidget.cpp  ControllerWidget.hpp  ControllerWidget.ui  CustomButton.cpp  CustomButton.hpp  HotkeyButton.cpp  HotkeyButton.hpp  MappingButton.cpp  MappingButton.hpp  RemoveMappingButton.cpp  RemoveMappingButton.hpp
Source/RMG-Input/Utilities/: InputDevice.cpp  InputDevice.hpp  InputProfileDB.cpp  InputProfileDB.hpp  QtKeyToSdl2Key.cpp  QtKeyToSdl3Key.hpp  Sdl3ButtonLabelToString.cpp  Sdl3ButtonLabelToString.hpp
Source/RMG/M64P/: Api.cpp  Api.hpp  ConfigApi.cpp  ConfigApi.hpp  CoreApi.cpp  CoreApi.hpp  Macros.hpp  PluginApi.cpp  PluginApi.hpp  dynlib.hpp  dynlib_unix.cpp  dynlib_win32.cpp
Source/RMG/M64P/Wrapper/: Api.cpp  Api.hpp  Config.cpp  Config.hpp  Core.cpp  Core.hpp  Plugin.cpp  Plugin.hpp  Types.hpp  VidExt.cpp  VidExt.hpp
Source/RMG/M64P/api/: m64p_custom.h
Source/RMG/Mupen/: Mupen.cpp  Mupen.hpp  MupenMacros.hpp  VidExt.cpp  VidExt.hpp
Source/RMG/Thread/: EmulationThread.cpp  EmulationThread.hpp  RomSearcherThread.cpp  RomSearcherThread.hpp
Source/RMG/Translations/: RMG_de.ts
Source/RMG/UserInterface/: EventFilter.cpp  EventFilter.hpp  KailleraSessionManager.cpp  KailleraSessionManager.hpp  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  NoFocusDelegate.cpp  NoFocusDelegate.hpp  RomBrowser.cpp  RomBrowser.hpp  RomBrowserWidget.cpp  RomBrowserWidget.hpp  UIResources.qrc  UIResources.rc  resource.h
Source/RMG/UserInterface/Dialog/: AboutDialog.cpp  AboutDialog.hpp  AboutDialog.ui  AddCheatDialog.cpp  AddCheatDialog.hpp  AddCheatDialog.ui  CheatsDialog.cpp  CheatsDialog.hpp  CheatsDialog.ui  ChooseCheatOptionDialog.cpp  ChooseCheatOptionDialog.ui  DownloadUpdateDialog.cpp  DownloadUpdateDialog.hpp  DownloadUpdateDialog.ui  InstallUpdateDialog.cpp  InstallUpdateDialog.hpp  InstallUpdateDialog.ui  LogDialog.cpp  LogDialog.hpp  LogDialog.ui  RomInfoDialog.cpp  RomInfoDialog.hpp  RomInfoDialog.ui  SettingsDialog.cpp  SettingsDialog.hpp  SettingsDialog.qrc  SettingsDialog.ui  UpdateDialog.cpp  UpdateDialog.hpp  UpdateDialog.ui
Source/RMG/UserInterface/Dialog/Cheats/: AddCheatDialog.cpp  AddCheatDialog.hpp  CheatsCommon.cpp  CheatsCommon.hpp  CheatsDialog.cpp  CheatsDialog.hpp  CheatsDialog.ui  ChooseCheatOptionDialog.cpp  ChooseCheatOptionDialog.hpp
Source/RMG/UserInterface/Dialog/Netplay/: CreateNetplaySessionDialog.cpp  CreateNetplaySessionDialog.hpp  CreateNetplaySessionDialog.ui  NetplayCommon.cpp  NetplayCommon.hpp  NetplaySessionBrowserDialog.cpp  NetplaySessionBrowserDialog.hpp  NetplaySessionBrowserDialog.ui  NetplaySessionDialog.cpp  NetplaySessionDialog.hpp  NetplaySessionDialog.ui  NetplaySessionPasswordDialog.cpp  NetplaySessionPasswordDialog.hpp  (+1 more)
Source/RMG/UserInterface/Widget/: ColumnID.hpp  KeyBindButton.cpp  KeyBindButton.hpp  KeybindButton.cpp  KeybindButton.hpp  OGLWidget.cpp  OGLWidget.hpp  RomBrowserEmptyWidget.cpp  RomBrowserEmptyWidget.ui  RomBrowserGridViewWidget.hpp  RomBrowserListViewWidget.cpp  RomBrowserListViewWidget.hpp  RomBrowserLoadingWidget.cpp  RomBrowserLoadingWidget.hpp  RomBrowserWidget.cpp  RomBrowserWidget.hpp  RowID.hpp  VKWidget.hpp
Source/RMG/Util/: Logger.cpp  Logger.hpp
Source/RMG/Utilities/: Logger.cpp  Logger.hpp  Plugins.cpp  Plugins.hpp  QtKeyToSdl2Key.cpp  QtKeyToSdl2Key.hpp  QtKeyToSdl3Key.cpp  QtKeyToSdl3Key.hpp  QtMessageBox.cpp  QtMessageBox.hpp  Settings.cpp  Settings.hpp  SettingsID.hpp
(+118 files in other folders)
